--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
-spring.datasource.url=jdbc:mysql://awstestdb.cintyg1em9qe.ap-south-1.rds.amazonaws.com:3306/testdb?useSSL=false
-spring.datasource.username=admin
-spring.datasource.password=admin123
+#spring.datasource.url=jdbc:mysql://awstestdb.cintyg1em9qe.ap-south-1.rds.amazonaws.com:3306/testdb?useSSL=false
+#spring.datasource.username=admin
+#spring.datasource.password=admin123
 #spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#enabling the H2 console
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 server.port=5000
